--- a/src/client/app/source/frontend/clientwindow.ui
+++ b/src/client/app/source/frontend/clientwindow.ui
@@ -11,16 +11,16 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Main Window Server</string>
+   <string>Main Window Client</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QWidget" name="widgetConnector" native="true">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>50</x>
       <y>290</y>
       <width>231</width>
-      <height>121</height>
+      <height>101</height>
      </rect>
     </property>
     <widget class="QLineEdit" name="lineEditIP">
@@ -37,7 +37,7 @@
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>50</y>
+       <y>40</y>
        <width>113</width>
        <height>24</height>
       </rect>
@@ -46,9 +46,9 @@
     <widget class="QPushButton" name="pushButtonConnection">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>90</y>
-       <width>80</width>
+       <x>130</x>
+       <y>70</y>
+       <width>61</width>
        <height>24</height>
       </rect>
      </property>
@@ -59,8 +59,8 @@
     <widget class="QLabel" name="labelIP">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>20</y>
+       <x>40</x>
+       <y>10</y>
        <width>49</width>
        <height>16</height>
       </rect>
@@ -72,14 +72,27 @@
     <widget class="QLabel" name="labelPort">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>50</y>
+       <x>40</x>
+       <y>40</y>
        <width>49</width>
        <height>16</height>
       </rect>
      </property>
      <property name="text">
       <string>Port:</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButtonCloseConnection">
+     <property name="geometry">
+      <rect>
+       <x>49</x>
+       <y>70</y>
+       <width>61</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Close</string>
      </property>
     </widget>
    </widget>
@@ -177,25 +190,6 @@
             </property>
            </widget>
           </item>
-          <item>
-           <widget class="QPushButton" name="pushButtonLoggerDownload">
-            <property name="minimumSize">
-             <size>
-              <width>20</width>
-              <height>20</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>20</width>
-              <height>20</height>
-             </size>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
          </layout>
         </item>
        </layout>
@@ -256,9 +250,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>430</y>
+      <y>390</y>
       <width>311</width>
-      <height>121</height>
+      <height>161</height>
      </rect>
     </property>
    </widget>
