--- a/src/server/app/resources/styles.qrc
+++ b/src/server/app/resources/styles.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/GUI">
         <file>styles/widget.qss</file>
+        <file>styles/label.qss</file>
+        <file>styles/lineEdit.qss</file>
+        <file>styles/textBrowser.qss</file>
     </qresource>
 </RCC>
