--- a/src/server/app/resources/styles/widget.qss
+++ b/src/server/app/resources/styles/widget.qss
@@ -1,3 +1,9 @@
 #carcasWidget {
     border: 2px solid;
+    background-color: rgb(50,50,50);
+}
+
+#mainWidget {
+    border: 2px solid;
+    background-color: black;
 }
